[package]
name = "saview"
version = "1.0.0"
authors = ["wabuntu <to.wabuntu@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wabuntu"
repository = "https://github.com/wabuntu/saview"
documentation = "https://docs.rs/saview"
description = """
saview prints monthly statistic graph of sysstat data.
"""

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }

